# n2-hmwk

./: .gitignore  README.md
cs3333-asn1/: .gitignore  CMakeLists.txt  cvimagewidget.h
cs3333-asn2/: CMakeLists.txt  asn1.cpp  asn2.cpp
cs3333-asn3/: CMakeLists.txt  ImageMotion.h  asn3.cpp
cs3333-asn4/: CMakeLists.txt  ImageMotion.h  asn4.cpp
cs4442-asn2/: .gitignore  CMakeLists.txt  test.cpp
cs4442-asn2/include/: VectorHash.h  fileRead.h  utilsToStudents.h
cs4442-asn2/include/kbright2/: database.h  ngram.h  utils.h
cs4442-asn2/include/kbright2/smoothing/: add_delta.h  good_turing.h
cs4442-asn2/report/: .gitignore  assignment_2.tex
cs4442-asn2/src/: fileRead.cpp
cs4442-asn2/src/kbright2/p1/: main.cpp  p1-find-longest.cpp  p1.cpp
cs4442-asn2/src/kbright2/p2/: main.cpp  p2.cpp
cs4442-asn2/src/kbright2/p3/: p3.cpp
cs4442-asn2/src/kbright2/p4/: p4.cpp
cs4442-asn2/src/kbright2/p5/: p5.cpp
cs4442-asn2/src/kbright2/p6/: p6.cpp
cs4442-asn2/test/: CMakeLists.txt  database-test.cpp  ngram-test.cpp
cs4442-asn2/test/test/: CMakeLists.txt  main.cpp  ngram-test.cpp
cs4442-asn3/: .gitignore  P1.m  P2.m  P3.m  P4.m  P5.m  addSeamV.m  applyMask.m  bestSeamV.m  computeEngColor.m  computeEngGradH.m  increaseHeight.m  increaseWidth.m  intelligentResize.m  reduceHeight.m  reduceWidth.m  removeSeamV.m  seamV_DP.m  stereoCorrespondence.m
cs4442-asn3/Code/forFG/: segmentGC.m  solveMinCut.m
cs4442-asn3/Report/: assignment_3.tex
cs9511-asn1/: A1.pro  Assignment_1.txt  Composite.cpp  Composite.hpp  GameWindow.cpp  GameWindow.hpp  GeometryUtils.hpp  RefinedQWidget.hpp  Tile.cpp  Tile.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cs9511-asn1/geometry/E2/: Geometry_E2.hpp  Point_E2.hpp  Triangle_E2.hpp
cs9511-asn1/misc/: determinant.hpp
ece3390_asn1/: .gitignore  ece3390_asn1.xpr
ece3390_asn1/ece3390_asn1.cache/wt/: webtalk_pa.xml
ece3390_asn1/ece3390_asn1.runs/.jobs/: vrs_config_16.xml  vrs_config_17.xml
ece3390_asn1/ece3390_asn1.runs/impl_1/: gen_run.xml  htr.txt  init_design.pb  opt_design.pb  place_design.pb  prob1.tcl  prob1.vdi  prob1_clock_utilization_routed.rpt  prob1_control_sets_placed.rpt  prob1_drc_opted.rpt  prob1_drc_routed.rpt  prob1_io_placed.rpt  prob1_opt.dcp  prob1_placed.dcp  prob1_power_routed.rpt  prob1_power_summary_routed.pb  prob1_routed.dcp  prob1_timing_summary_routed.rpt  prob1_utilization_placed.rpt  route_design.pb  vivado.jou  vivado.pb
ece3390_asn1/ece3390_asn1.runs/synth_1/: gen_run.xml  htr.txt  prob1.dcp  prob1.tcl  prob1.vds  prob1_utilization_synth.pb  prob1_utilization_synth.rpt  vivado.jou  vivado.pb
ece3390_asn1/ece3390_asn1.sim/sim_1/behav/: asn1_tb_vhdl.prj  webtalk.jou  webtalk_13318.backup.jou  xelab.pb  xvhdl.pb
ece3390_asn1/ece3390_asn1.sim/sim_1/behav/xsim.dir/asn1_tb_behav/: Compile_Options.txt  xsim.mem
ece3390_asn1/ece3390_asn1.sim/sim_1/behav/xsim.dir/asn1_tb_behav/webtalk/: usage_statistics_ext_xsim.xml
ece3390_asn1/ece3390_asn1.srcs/sources_1/new/: asn1_p2.vhd  asn1_p3.vhd  asn1_tb.vhd
ece4489-asn2/: .gitignore
ece4489-asn2/kbright2-asn2/: ShiftRegister.vhd  ShiftRegisterTestBench.vhd  TestBenchUpDown.vhd  UpDown.vhd  kbright2-asn2.xise
ece4489-asn3/: .gitignore  ProcAccALU.vhd  ProcFSM.vhd  ProcRegs.vhd  ProcTB1.vhd  config.wcfg  dec2to4.vhd  kbright2-asn3.xise  proc.vhd  regn.vhd  subccts.vhd  trin.vhd  upcount.vhd
